# Release Information

## 2024

### Februari
* `2024-02-05 13:58:35` : Disabled alternative BCLD_MD5CHECK
* `2024-02-05 11:39:11` : Fix permissions and remove NSSDB generation from [chroot.sh](./script/chroot.sh)
* `2024-02-02 15:25:10` : 
    - Fix certificate permissions inside [bcld_vendor.sh](./script/bcld_vendor.sh)
    - Remove KEY checks from [bcld_vendor.sh](./script/bcld_vendor.sh) (they no longer work since the NSSDB has password security)

### January
* `2024-01-26 16:46:24` : RepoMan dependency check updates
* `2024-01-26 13:38:45` : Kernel update `6.2.0-37` > `6.2.0-39` (kernel 6.5 does not yet support Realtek 8168)
* `2024-01-25 14:21:40` : Added [RepoMan](./RepoMan.sh) dependencies to [BUILD packages](./config/packages/BUILD)
* `2024-01-22 18:01:45` : BATS tests refactored into single file: `./test/00_BCLD-BUILD.bats`
* `2024-01-22 16:05:02` : Removing `test/00_PRE-BUILD.bats` because tests are not portable
* `2024-01-12 16:58:28` : Added `shellcheck` to `BUILD` packages and `./test/BCLD-BATS.sh`
* `2024-01-12 14:27:53` : [OAC-897] Added pactl scan before starting the app to detect hidden sinks
* `2024-01-11 13:48:04` : Expand HashGen to include `./.assets` and `./.github`
* `2024-01-10 12:39:20` : Vendorless BCLD released on GitHub
    - BATS modules readded
    - Cleanup up [README.md](./README.md)
* `2024-01-03 16:42:21` : 
    - Replaced `falkon` with `qutebrowser`
    - Unable to disable tabs, only downside
    - Added `Shift + Escape` to `.xbindkeys` for `QuteBrowser`
    - Plymouth English translation

## 2023

### December
* `2023-12-12 15:39:18`: More chroot checks
* `2023-12-11 17:13:44`: 
    - Updated `./BCLD_FLOW.png`
    - Delete `systemd-resolvd.service`
    - Added `BCLD_APP` to the required build ENVs
    - Improvements to checks for required ENVs
    - Removed value outputs for ENV checks as they are not needed
* `2023-12-08 16:12:01`: 
    - Introduce `BCLD_CFG_EDIT` as build variable